@@ -103,6 +103,9 @@ Trunk - Unreleased
 
     HIVE-656. Add a PMOD (POSITIVE MOD) function. (Scott Chen via zshao)
 
+    HIVE-698. Add create temporary function for generic UDAF. 
+    (Zheng Shao via namit)
+
   IMPROVEMENTS
     HIVE-389. Option to build without ivy (jssarma)
 
